--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@ main{
 
 .sections ul{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   width: 70%;
   flex-shrink: 1;
